<resources>
    <string name="app_name">VKNaks</string>

    <integer name="com_vk_sdk_AppId">5367687</integer>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_menu_item_news">News</string>
    <string name="nav_menu_item_feedback">Feedback</string>
    <string name="nav_menu_item_messages">Messages</string>
    <string name="nav_menu_item_friends">Friends</string>
    <string name="nav_menu_item_birthdays">Birthdays</string>
    <string name="nav_menu_item_communities">Communities</string>
    <string name="nav_menu_item_photos">Photos</string>
    <string name="nav_menu_item_bookmarks">Bookmarks</string>
    <string name="nav_menu_item_search">Search</string>
    <string name="nav_menu_item_settings">Settings</string>

    <string name="tab_news">news</string>
    <string name="tab_recommendations">recommendation</string>
    <string name="tab_friends">friends</string>
    <string name="tab_communities">communities</string>

    <string name="error_news">Error while loading news</string>
    <string name="error_news_retry">Error while loading news. Click here to retry</string>
    <string name="error_item_button">Retry</string>

    <string name="expandButton">Show more</string>
    <string name="today">Today at\u0020</string>

    <string name="toast_reference">Url</string>
    <string name="toast_is_copied">is copied</string>

    <string name="copy_to_buffer">Copy to buffer</string>
    <string name="complains">Complains</string>
    <string name="not_interesting">Not interesting</string>

    <string name="imageDescription">imageDescription</string>

</resources>
